# macos-whisper-bar

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/python/: bootstrap.py  worker.py
src-tauri/src/: app_state.rs  audio.rs  bootstrap.rs  lib.rs  main.rs  models.rs  runtime_scripts.rs  sck_audio_helper.rs  transcript_file.rs  tray.rs  ui.rs  worker.rs
